fix: set textarea font and display block to fix alignment issues

--- a/client/src/components/Editor/Editor.module.css
+++ b/client/src/components/Editor/Editor.module.css
@@ -22,6 +22,7 @@
 }
 
 .codespace__textarea {
+  display: block;
   caret-color: var(--color-light);
   background: transparent;
   position: absolute;
@@ -31,6 +32,7 @@
   width: calc(100% - 60.8px);
   height: 100%;
   font-size: 1rem;
+  font-family: "Roboto Mono", monospace;
   line-height: 1.5rem;
   resize: none;
   border: none;
@@ -67,9 +69,6 @@
 }
 
 @media screen and (max-width: 768px) {
-  .editor {
-    padding: 20px 20px 0 0px;
-  }
 
   .btn__save {
     bottom: 2rem;
