--- a/client/src/components/prism-themes/prism-line-numbers.css
+++ b/client/src/components/prism-themes/prism-line-numbers.css
@@ -28,6 +28,7 @@ pre[class*="language-"].line-numbers {
 pre[class*="language-"].line-numbers > code {
   position: relative;
   white-space: inherit;
+  display: block;
 }
 
 .line-numbers .line-numbers-rows {
